fixed the overflow issue

--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -7,22 +7,6 @@ html {
 }
 
 body {
-    background-color: #7d807f;
-    background-image: url("../img/about.JPG");
-    background-position: center top;
-    background-repeat:  no-repeat;
-    background-attachment: fixed;
-    background-size:  cover;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
-    &::before {
-      content: "";
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      background-color: rgba(256, 256, 256, 0.4);
-    }
     .hidden {
         display: none;
     }
@@ -32,8 +16,24 @@ html, body, .content-wrapper{
     width: 100%;
     height: 100%;
     margin: 0;
+    overflow: hidden;
+    position: relative;
 }
 
 .content-wrapper {
-    overflow: hidden;
+    background-color: #7d807f;
+    background-image: url("../img/about.JPG");
+    background-position: center top;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size:  cover;
+    font-family: Arial, Helvetica, sans-serif;
+    &::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: rgba(256, 256, 256, 0.4);
+    }
 }
